--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ MYSQL_DATABASE = student_event_db
 
 EMAIL_USER = correo@gmail.com
 EMAIL_PASS = contraseñaDeAplicacionGmail
+
+GOOGLE_CLIENT_ID= client_id
+GOOGLE_CLIENT_SECRET= client_secret
+GOOGLE_CALLBACK_URL= http://localhost:3000/api/auth/google/callback
