--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,10 @@
 PORT = 3000
 
-MYSQL_HOST = localhost
-MYSQL_PORT = 3307
-MYSQL_USERNAME = root
-MYSQL_DATABASE = student_event_db
-
 EMAIL_USER = correo@gmail.com
 EMAIL_PASS = contraseñaDeAplicacionGmail
 
 GOOGLE_CLIENT_ID= client_id
 GOOGLE_CLIENT_SECRET= client_secret
 GOOGLE_CALLBACK_URL= http://localhost:3000/api/auth/google/callback
+
+DATABASE_URL=postgresql
