--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ GOOGLE_CLIENT_SECRET= client_secret
 GOOGLE_CALLBACK_URL= http://localhost:3000/api/auth/google/callback
 
 DATABASE_URL=postgresql
+
+JWT_SECRET = a749fec8bd0555215b5794d4d824c4bd
+JWT_EXPIRE_IN = 1d
+
+REFRESH_JWT_SECRET = 92d57dc67ead2075ec27c73a02690fd9
+REFRESH_JWT_EXPIRE_IN = 1d
